# apex

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  RNN.html  _config.yaml  advanced.html  amp.html  build.sh  build_amp.py  build_cffi.py  clean.sh  fp16_utils.html  genindex.html  index.html  layernorm.html  mlperf_bert_changes.tar  objects.inv  optimizers.html  parallel.html  py-modindex.html  pyproject.toml  reparameterization.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.py  utils.html  version.txt  windows_install.md
_custom_build/: backend.py
_modules/: index.html
_sources/: RNN.rst.txt  amp.rst.txt  fp16_utils.rst.txt  index.rst.txt  optimizers.rst.txt  parallel.rst.txt  reparameterization.rst.txt  utils.rst.txt
_static/: documentation_options.js
apex/: __init__.py  _autocast_utils.py  _custom_ops.py
build_scripts/: .gitignore  README.md  build.sh  build_test.sh  fmhalib.h  test_fmha_so.cc
csrc/: CUDATypeConversion.cuh  Module.cpp  amp_C_frontend.cpp  compat.h  flatten_unflatten.cpp  fused_adam_cuda.cpp  fused_adam_cuda_kernel.cu  fused_dense.cpp  fused_dense_base.cpp  fused_dense_cuda.cu  fused_weight_gradient_dense_cuda.cu  instance_norm_nvfuser.cpp  instance_norm_nvfuser_kernel.cu  interface.cpp  kernel.cu  kernel_utils.cuh  layer_norm_cuda.cpp  layer_norm_cuda_kernel.cu  mlp.cpp  mlp_cuda.cu  multi_tensor_adagrad.cu  multi_tensor_adam.cu  multi_tensor_apply.cuh  multi_tensor_apply.h  multi_tensor_apply_base.cuh  multi_tensor_axpby_kernel.cu  multi_tensor_l2norm_kernel.cu  multi_tensor_l2norm_kernel_mp.cu  multi_tensor_l2norm_scale_kernel.cu  multi_tensor_lamb.cu  multi_tensor_lamb_mp.cu  multi_tensor_lamb_stage_1.cu  multi_tensor_lamb_stage_2.cu  multi_tensor_lans.cu  multi_tensor_lars.cu  multi_tensor_novograd.cu  multi_tensor_scale_kernel.cu  multi_tensor_sgd_kernel.cu  multi_tensor_unscale_kernel.cu  (+14 more)
docs/: Makefile
(+882 files in other folders)
